Changes to use resolve warnings from java on container restart